--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
+        - cd $AMPLIFY_MONOREPO_APP_ROOT
         - npm ci
     build:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: .next
+    baseDirectory: $AMPLIFY_MONOREPO_APP_ROOT/.next
     files:
       - '**/*'
   cache:
     paths:
-      - node_modules/**/*
+      - $AMPLIFY_MONOREPO_APP_ROOT/node_modules/**/*
